align to cesium 1.71

--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "cesium-sensor-volumes",
-  "version": "1.32.0",
+  "name": "cesium-sensor-volumes-71",
+  "version": "1.71.0",
   "description": "A Cesium plugin for visualizing sensor volumes.",
   "homepage": "https://cesiumjs.org",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jlouns/cesium-sensor-volumes.git"
+    "url": "https://github.com/rulonder/cesium-sensor-volumes-71.git"
   },
   "keywords": [
     "cesium"
   ],
   "dependencies": {
-    "cesium": "1.32.1",
+    "cesium": "1.71.0",
     "requirejs": "^2.3.3",
     "requirejs-text": "^2.0.15"
   },
